--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width-device-html, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable"  content="yes">
+    <title>Understanding TypeScript</title>
+    <script src = "hello.js" defer></script>
   </head>
-  <button id = "button">
+  <body>
 
-  </button>
+  </body>
 
 </html>
